Version 1.1
 Fixed:
  - Clean setup: error while loading application settings by key: prefixDefaultPath [BUG-25];

Version 1.0-r2
 Added:
  - Persian translation. Thx 2 Arash Ariayee;

Version 1.0-r1
 Fixed:
  - Prefix tree "Delete" menu item do not remove menu tree.
  - Support for utf8 system user name [BUG-20];
  - Winetricks doesn't work properly if WINEPATH contain spaces [BUG-19];

Version 1.0
 Fixed:
  - Quote run string in case of console useage (gnome-terminal, see BUG-15)
  - Winetricks functionality fails to work [BUG-15]
  - Cannot run 'Create Fake Drive' for a new prefix with a win32 architecture [BUG-14]
  - System Language autodetection does not work [BUG-13]
  - Error while loading application settings by key: 'WineLibs'. File or path does not exist: "" [BUG-12]
  - q4wine doesn't clean up user's tmp directory [BUG-11]
 
 Removed:
  - File -> Install wizard menu entry;

 Added:
  - Option to set default directory for new wine prefixes (default: $HOME/.local/share/wineprefixes)
  - q4wine desktop menu tree [BUG-16]

Version 0.999-rc8
 Added:
  - Prefix execution template string;

 Fixed:
  - regression: selection focus jumps to prefix name on subdirectory selection;
  - regression: can't load user selected language

Version 0.999-rc7
 Added:
  - Winetricks database cache;
  - Merge Wintricks core;
  - New System Config interface;
  - Mac OS X support;
  - Pre and Post run Icon scripts [3465598][3388054][2716333];
  - Icon and Prefix sorting (name, date);
  - Version string to About page;
  - Handler for wrong URL in wine app db;
  - Add Logging subsystem activation\deactivation button to Logging tab toolbar;
  - Add taskmgr, winemine, iexplorer, control, oleview icons to prefix's system folder;
  - New system icons from latest wine version;
  - Install program icons in $prefix/share/icons/hicolor/; Add 16,22,32,48,64,96,128,256 icon sizes [3505384];
  - Prefix to translation files names [3506372];
  - Prefix execution template string;

  Fixed: